fixing overflows

--- a/src/global.css
+++ b/src/global.css
@@ -36,3 +36,7 @@ html {
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
+
+body {
+  overflow-x: hidden;
+}
